syntax = "proto3";

package protomesh.types.v1;

option go_package = "github.com/protomesh/protomesh/proto/api/types/v1;typesv1";

import "api/types/v1/networking.proto";
import "api/types/v1/process.proto";
import "terraform/annotations.proto";

message TypedResource {
    option (protomesh.terraform.message_schema) = {
      generate : false
      is_resource : false
    };


    string namespace = 1;
    string id = 2;
    string name = 3;

    oneof spec {
        protomesh.types.v1.NetworkingNode networking_node = 4;
        protomesh.types.v1.Trigger trigger = 5;
    }
}